--- a/static/index.html
+++ b/static/index.html
@@ -179,7 +179,7 @@
 
 
     <div id="resultsSection" class="bg-gray-800 rounded-lg shadow-lg p-6 overflow-hidden">
-      <h2 class="text-2xl font-bold mb-4 text-center">Log Chart & Log Console</h2>
+      <h2 class="text-2xl font-bold mb-4 text-center">Log Chart & Console</h2>
       <canvas id="portChart" class="mx-auto max-w-xs mb-6"></canvas>
       <div
         id="results"
